# Kolyre

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
kolyre/: __init__.py  core.py  demo.py
tests/: test_color_modes.py  test_colorize.py  test_constants.py  test_kolyre.py  test_windows.py
